# TinyUI

./: CMakeLists.txt
Elements/: Box.cpp  Box.h  Button.cpp  Button.h  ProgressBar.cpp  ProgressBar.h  TextBox.cpp  TextBox.h  View.cpp  View.h  Widget.cpp  Widget.h
Examples/arduino/library_folder/: library.properties
Examples/arduino/library_folder/src/: TinyUI.h
Examples/arduino/tiny_ui_test/: tiny_ui_test.ino
Examples/sfml/: main.cpp
Examples/sfml/Screen/: Screen.cpp  Screen.h
InterfaceManager/: InterfaceManager.cpp  InterfaceManager.h
Painter/: Painter.cpp  Painter.h
Properties/: Color.h  Colorable.cpp  Colorable.h  Moveable.cpp  Moveable.h  Position.h  Resizeable.cpp  Resizeable.h  Size.h
Widgets/: Weekendar.cpp  Weekendar.h
